Add support for Java 26-ea